# MridangamTranscription

./: .gitignore  KAGGLE_INSTRUCTIONS.md  README.md  kaggle_setup.py  main.py  pyproject.toml  requirements.txt
dataset/data_processing/: audio_analysis.ipynb  data_preparation.py  dataset_creation.py
inference/: README_realtime.md  audio_recording_inference.py  check_model.py  example_realtime_usage.py  example_recording_inference.py  load_trained_model.py  realtime_cnn_attention_inference.py  requirements_realtime.txt  requirements_simple.txt  simple_realtime_inference.ipynb  simple_realtime_inference.py  test_setup.py
inference/model_weights/: modelOutput.pth  mridangam_model_final.pth
inference/pipelines/: cnn_attentive_pooling_inference.ipynb  cnn_inference.ipynb
kaggle_export/: README.md  model.py
kaggle_export/code/: CNN.py  data_preparation.py  dataset_creation_kaggle.py  kaggle_notebook.ipynb  model_evaluation.ipynb  simple_metrics.py  validate_dataset.py
model_architecture/: CNN.py  CNN_attentive_pooling.py  CNN_with_attention.py
model_checkpoints/: best_model_20250615_181217.pth  best_model_20250615_184820.pth  best_model_20250615_234050.pth  best_model_20250622_010327.pth  latest_checkpoint_20250615_181217.pth  latest_checkpoint_20250615_184820.pth  latest_checkpoint_20250615_234050.pth  training_summary.txt
mridangam_transcription.egg-info/: PKG-INFO  SOURCES.txt
